# DBusShellRunner

./: CMakeLists.txt  README.md  chatgpt.md  client_test.c  client_test.cpp  deamon.c  shell_runner.c  shell_runner.h
